# pdf2vectors-rag-playground

./: .gitignore  README.md  pyproject.toml
src/: README.md  docling_from_pixparse.py  quick_check.py
src/data_sources/: README.md  __init__.py  pixparse_loader.py
src/eval/: README.md  __init__.py  run_docling_eval.py  run_parser_comparison_eval.py  text_metrics.py
src/parsers/: README.md  __init__.py  docling_parser.py  granite_docling_parser.py  parser_interface.py
